nu funkar typ kommentarer.

--- a/Systemet/Views/Evenemangs/evenemangssida.cshtml
+++ b/Systemet/Views/Evenemangs/evenemangssida.cshtml
@@ -73,8 +73,8 @@
                                            
                                         </a>
                                         <div class="media-body">
-                                            <h4 class="media-heading"><a>John Doe</a> <small>Just now</small></h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                            <h4 class="media-heading"><a>@item.kommentator.FörNamn @item.kommentator.EfterNamn</a> <small>@item.TidenFörKommentaren.ToShortTimeString()</small></h4>
+                                            <p>@item.Text</p>
                                         </div>
                                     </li>
                                 }
