INLOGGAD.cshtml: -lagt till sökruta som hänvisar till gåmedigrupp via KontoController

--- a/Systemet/Views/Grupp/gåmedigrupp.cshtml
+++ b/Systemet/Views/Grupp/gåmedigrupp.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "gåmedigrupp";
 }
 
-<h2>sök gruppens namn</h2>
-@using (Html.BeginForm())
-{
-    @Html.TextBox("sökning")
-    <input type="submit" value="Search" />
+<h2>Grupper:</h2>
+
+@Html.DisplayFor(model = Model.)
+
 }
 
