-håller på med att visa gruppsökning, ej klart  - ändrat metoder i kontokontroller och gruppkontroller

--- a/Systemet/Views/Grupp/gåmedigrupp.cshtml
+++ b/Systemet/Views/Grupp/gåmedigrupp.cshtml
@@ -6,7 +6,19 @@
 
 <h2>Grupper:</h2>
 
-@Html.DisplayFor(model = Model.)
+@{
+    var grupperna = TempData["allagrupper"];
 
+    } 
+
+@foreach (var item in Model )
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.GruppNamn)
+    </tr>
 }
 
