--- a/Systemet/Views/Konto/inloggad.cshtml
+++ b/Systemet/Views/Konto/inloggad.cshtml
@@ -24,6 +24,7 @@
                   {
                       @Html.TextBox("sökning")
                       <input type = "submit" value = "sökning" name = "sökning" id = "sökning" />
+                       @ViewBag.Sökning 
                   }
 
 
