småpill i layout bara

--- a/Systemet/Views/Shared/_Layout.cshtml
+++ b/Systemet/Views/Shared/_Layout.cshtml
@@ -9,11 +9,14 @@
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
     @Styles.Render("~/Content/agena.css")
+    @Styles.Render("~/Content/comments.css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryui")
     
+
+
 
 </head>
 <body>
