--- a/Systemet/Content/comments.css
+++ b/Systemet/Content/comments.css
@@ -3,7 +3,7 @@
 
 
 body {
-    background: #EEEEEE;
+    background: #fff;
 }
 
 .box-info.full {
@@ -17,13 +17,13 @@ body {
 .box-info {
     position: relative;
     padding: 15px;
-    background: #fff;
+    background: #ffffff;
     color: #5b5b5b;
     margin-bottom: 20px;
     -webkit-transition: All 0.4s ease;
     -moz-transition: All 0.4s ease;
     -o-transition: All 0.4s ease;
-    background: #FFFFFF;
+    background: #FFF;
     margin-top: 20px;
 }
 
