fixat lite buggar i redigera användaren och styrt upp routevalues där

--- a/Systemet/Content/comments.css
+++ b/Systemet/Content/comments.css
@@ -1,4 +1,4 @@
-﻿body {
+﻿.body {
 }
 
 
@@ -7,7 +7,7 @@ body {
 }
 
 .box-info.full {
-    padding: 0px;
+    padding: 1px;
 }
 
 .box-info:hover {
