--- a/Systemet/Views/Grupp/minagrupper.cshtml
+++ b/Systemet/Views/Grupp/minagrupper.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewBag.Title = "minagrupper";
 }
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li class="active">Mina Grupper</li>
+</ol>
 
 <h2>minagrupper</h2>
 
