-lagt till breadcrumbs på ett flertal sidor för enklare navigering

--- a/Systemet/Views/Evenemangs/Create.cshtml
+++ b/Systemet/Views/Evenemangs/Create.cshtml
@@ -9,7 +9,16 @@
 }
 <link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
 
-<h2>Create</h2>
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li class="active">Skapa Evenemang</li>
+</ol>
+
+
+<h2>Skapa Evenemang</h2>
 
 
 @using (Html.BeginForm()) 
