--- a/Systemet/Views/Evenemangs/Delete.cshtml
+++ b/Systemet/Views/Evenemangs/Delete.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Delete";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li class="active">Radera Evenemang</li>
+</ol>
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
