--- a/Systemet/Views/Evenemangs/Edit.cshtml
+++ b/Systemet/Views/Evenemangs/Edit.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li class="active">Redigera Evenemang</li>
+</ol>
+
 <h2>Edit</h2>
 
 
