--- a/Systemet/Views/Evenemangs/Index.cshtml
+++ b/Systemet/Views/Evenemangs/Index.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Index";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li class="active">Alla Evenemang</li>
+</ol>
+
 <h2>Index</h2>
 
 <p>
