--- a/Systemet/Views/Grupp/Delete.cshtml
+++ b/Systemet/Views/Grupp/Delete.cshtml
@@ -4,6 +4,13 @@
     ViewBag.Title = "Delete";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li class="active">Radera Grupp</li>
+</ol>
+
+
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
