--- a/Systemet/Views/Grupp/Details.cshtml
+++ b/Systemet/Views/Grupp/Details.cshtml
@@ -4,6 +4,13 @@
     ViewBag.Title = "Details";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li class="active">Om Gruppen</li>
+</ol>
+
+
 <h2>Details</h2>
 
 <div>
