--- a/Systemet/Views/Grupp/Edit.cshtml
+++ b/Systemet/Views/Grupp/Edit.cshtml
@@ -4,6 +4,13 @@
     ViewBag.Title = "Edit";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li class="active">Redigera Grupp</li>
+</ol>
+
+
 <h2>Edit</h2>
 
 
