--- a/Systemet/Views/Evenemangs/Details.cshtml
+++ b/Systemet/Views/Evenemangs/Details.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Details";
 }
 
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">Evenemang</a></li>
+    <li class="active">Om Evenemang</li>
+</ol>
+
 <h2>Details</h2>
 
 <div>
