--- a/Systemet/Views/EvenemangsKommentarers/komments.cshtml
+++ b/Systemet/Views/EvenemangsKommentarers/komments.cshtml
@@ -4,6 +4,14 @@
     ViewBag.Title = "Create";
 
 }
+<ol class="breadcrumb">
+    <li><a href="~/Views/Konto/inloggad.cshtml">Start</a></li>
+    <li><a href="~/Views/Grupp/minagrupper.cshtml">Mina Grupper</a></li>
+    <li><a href="~/Views/Grupp/gruppsida.cshtml">Gruppsida</a></li>
+    <li><a href="~/Views/Evenemangs/evenemangssida.cshtml">@Model.evenemang.Namn</a></li>
+    <li class="active">Kommentarer: @Model.evenemang.Namn</li>
+</ol>
+
 
 @using (Html.BeginForm(new { id = @ViewBag.rättevent.EvenemangID }))
 {
